--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div>
         <ul>
-            <li><a href="./p1.PNG"> <img
+            <li class="imge1"><a href="./p1.PNG"> <img
                         src="https://raw.githubusercontent.com/anfalzuberi/poem12345/919600b073d157f64832c8a966b9400a2e51fc73/p1.PNG"
                         alt=""> </a></li>
-            <li><a href=""></a> <img
+            <li class="imge2"><a href=""></a> <img
                     src="https://raw.githubusercontent.com/anfalzuberi/poem12345/919600b073d157f64832c8a966b9400a2e51fc73/p2.PNG"
                     alt=""> </li>
             <li> <a href=""> <img
