--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div>
+<body class="poem1">
+    <div class="poem1">
         <ul>
-            <li class="imge1"><a href="./p1.PNG"> <img
-                        src="https://raw.githubusercontent.com/anfalzuberi/poem12345/919600b073d157f64832c8a966b9400a2e51fc73/p1.PNG"
-                        alt=""> </a></li>
-            <li class="imge2"><a href=""></a> <img
-                    src="https://raw.githubusercontent.com/anfalzuberi/poem12345/919600b073d157f64832c8a966b9400a2e51fc73/p2.PNG"
+            <li class="poem1"><a href="./poem2.html"> <img
+                        src="./asset/poem1.png"
+                        alt="imge not find"> </a></li>
+                        <a href="./poem2.html"> <img src="./poem2.html" alt=""></a>
+            <!-- <li class="imge2"><a href=""></a> <img
+                    src="https://de23-engine.flamingtext.com/netfu/tmp28003/coollogo_com-6882105.png"
                     alt=""> </li>
             <li> <a href=""> <img
                         src="https://raw.githubusercontent.com/anfalzuberi/poem12345/919600b073d157f64832c8a966b9400a2e51fc73/p3.PNG"
@@ -25,7 +26,7 @@
                         alt=""></a></li>
             <li><a href=""> <img
                         src="https://raw.githubusercontent.com/anfalzuberi/poem12345/919600b073d157f64832c8a966b9400a2e51fc73/p4.PNG"
-                        alt=""></a></li>
+                        alt=""></a></li> -->
         </ul>
         <p> “Baa, Baa, Black Sheep” Lyrics <br>
             Modern version <br>
