--- a/poem4.html
+++ b/poem4.html
@@ -22,53 +22,53 @@
 Add this poem to an anthology <br>
 Margaret Atwood
 1939 <br>
-In the burned house I am eating breakfast.
-You understand: there is no house, there is no breakfast,
-yet here I am.
+In the burned house I am eating breakfast. <br>
+You understand: there is no house, there is no breakfast, <br>
+yet here I am. <br>
 
-The spoon which was melted scrapes against
-the bowl which was melted also.
-No one else is around.
+The spoon which was melted scrapes against <br>
+the bowl which was melted also. <br>
+No one else is around. <br>
 
-Where have they gone to, brother and sister,
-mother and father? Off along the shore,
-perhaps. Their clothes are still on the hangers,
+Where have they gone to, brother and sister, <br>
+mother and father? Off along the shore, <br>
+perhaps. Their clothes are still on the hangers, <br>
 
-their dishes piled beside the sink,
-which is beside the woodstove
-with its grate and sooty kettle,
+their dishes piled beside the sink, <br>
+which is beside the woodstove <br>
+with its grate and sooty kettle, <br>
 
-every detail clear,
-tin cup and rippled mirror.
-The day is bright and songless,
+every detail clear, <br>
+tin cup and rippled mirror. <br>
+The day is bright and songless, <br>
 
-the lake is blue, the forest watchful.
-In the east a bank of cloud
-rises up silently like dark bread.
+the lake is blue, the forest watchful. <br>
+In the east a bank of cloud <br>
+rises up silently like dark bread. <br>
 
-I can see the swirls in the oilcloth,
-I can see the flaws in the glass,
-those flares where the sun hits them.
+I can see the swirls in the oilcloth, <br>
+I can see the flaws in the glass, <br>
+those flares where the sun hits them. <br>
 
-I can't see my own arms and legs
-or know if this is a trap or blessing,
-finding myself back here, where everything
+I can't see my own arms and legs <br>
+or know if this is a trap or blessing, <br>
+finding myself back here, where everything <br>
 
-in this house has long been over,
-kettle and mirror, spoon and bowl,
-including my own body,
+in this house has long been over, <br>
+kettle and mirror, spoon and bowl, <br>
+including my own body, <br>
 
-including the body I had then,
-including the body I have now
-as I sit at this morning table, alone and happy,
+including the body I had then, <br>
+including the body I have now <br>
+as I sit at this morning table, alone and happy, <br>
 
-bare child's feet on the scorched floorboards
-(I can almost see)
-in my burning clothes, the thin green shorts
+bare child's feet on the scorched floorboards <br>
+(I can almost see) <br>
+in my burning clothes, the thin green shorts <br>
 
-and grubby yellow T-shirt
-holding my cindery, non-existent,
-radiant flesh. Incandescent.
+and grubby yellow T-shirt <br>
+holding my cindery, non-existent, <br>
+radiant flesh. Incandescent. <br>
         </p>
     </div>
 </body>
