git committed main

--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
 <body class="poem1">
     <div class="poem1">
         <ul>
-            <li class="poem1"><a href="./poem2.html"> <img
-                        src="./asset/poem1.png"
-                        alt="imge not find"> </a></li>
-                        <a href="./poem2.html"> <img src="./poem2.html" alt=""></a>
-            <!-- <li class="imge2"><a href=""></a> <img
-                    src="https://de23-engine.flamingtext.com/netfu/tmp28003/coollogo_com-6882105.png"
-                    alt=""> </li>
-            <li> <a href=""> <img
+            <li class="poem1"><a href="./poem2.html"> <img src="./asset/poem1.png" alt="imge not find"> </a></li>
+            <a href="./poem2.html"> <img src="./poem2.html" alt=""></a>
+           
+            <!-- <li> <a href=""> <img
                         src="https://raw.githubusercontent.com/anfalzuberi/poem12345/919600b073d157f64832c8a966b9400a2e51fc73/p3.PNG"
                         alt=""></a></li>
             <li><a href=""> <img
